force-app/main/default/objects/AAO_Flag__c/AAO_Flag__c.object-meta.xml
<CustomObject>
    <description>A demand: it counts, it ages, it wants clearing, it comes looking for you. Type is set at birth and never changes. Colour is display, derived from type; nothing reasons about colour.</description>
    <label>AAO Flag</label>
    <nameField>
        <displayFormat>FLG-{00000000}</displayFormat>
        <label>AAO Flag Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>AAO Flags</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>