force-app/main/default/objects/AAO_Flag__c/fields/AAO_Acknowledged_At__c.field-meta.xml
<CustomField>
    <fullName>AAO_Acknowledged_At__c</fullName>
    <description>Written by: Acknowledgement. Contention only. Read by: Captured at the instant it happens.</description>
    <label>Acknowledged At</label>
    <type>DateTime</type>
</CustomField>