force-app/main/default/objects/AAO_Flag__c/fields/AAO_Acknowledged_By__c.field-meta.xml
<CustomField>
    <fullName>AAO_Acknowledged_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Written by: Acknowledgement. Contention only. Read by: Captured at the instant it happens; the correlation to deal outcome is permanently lost otherwise.</description>
    <label>Acknowledged By</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>AAO Acknowledged Flags</relationshipLabel>
    <relationshipName>AAO_Acknowledged_Flags</relationshipName>
    <type>Lookup</type>
</CustomField>