force-app/main/default/objects/AAO_Flag__c/fields/AAO_Acknowledgement_Text__c.field-meta.xml
<CustomField>
    <fullName>AAO_Acknowledgement_Text__c</fullName>
    <description>Written by: Acknowledgement. Contention only. Read by: Written, because the risk transfers to the person who accepted it and that is only legitimate because it is recorded.</description>
    <label>Acknowledgement Text</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>