force-app/main/default/objects/AAO_Flag__c/fields/AAO_Answer__c.field-meta.xml
<CustomField>
    <fullName>AAO_Answer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Written by: Raise. Read by: The unmet condition. One hop to what is wrong.</description>
    <label>Answer</label>
    <referenceTo>AAO_Answer__c</referenceTo>
    <relationshipLabel>AAO Flags</relationshipLabel>
    <relationshipName>AAO_Flags</relationshipName>
    <type>Lookup</type>
</CustomField>