force-app/main/default/objects/AAO_Flag__c/fields/AAO_Answer_Here__c.field-meta.xml
<CustomField>
    <fullName>AAO_Answer_Here__c</fullName>
    <description>Written by: Raise. Read by: Where to write a response so it gets the express lane. A seller who does the work in a place we do not read must learn that from the flag, not from its persistence.</description>
    <label>Answer Here</label>
    <type>Text</type>
    <length>255</length>
</CustomField>