force-app/main/default/objects/AAO_Flag__c/fields/AAO_Bound_Key__c.field-meta.xml
<CustomField>
    <fullName>AAO_Bound_Key__c</fullName>
    <description>Written by: the cardinality guard. Opportunity id plus bounded path. Unique, so a path that keeps hitting its bound raises one flag that updates rather than one per attempt.</description>
    <label>Bound Key</label>
    <type>Text</type>
    <length>120</length>
    <unique>true</unique>
    <externalId>true</externalId>
</CustomField>