force-app/main/default/objects/AAO_Flag__c/fields/AAO_Candidate__c.field-meta.xml
<CustomField>
    <fullName>AAO_Candidate__c</fullName>
    <description>Written by: Raise. Read by: Ratification flags only: the held write awaiting a human.</description>
    <label>Candidate</label>
    <type>Lookup</type>
    <referenceTo>AAO_Candidate__c</referenceTo>
    <relationshipName>AAO_Flags</relationshipName>
    <relationshipLabel>AAO Flags</relationshipLabel>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>