force-app/main/default/objects/AAO_Flag__c/fields/AAO_Cause__c.field-meta.xml
<CustomField>
    <fullName>AAO_Cause__c</fullName>
    <description>Written by: Raise. Read by: Why it fired.</description>
    <label>Cause</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cardinality_Exceeded</fullName>
                <label>Cardinality Exceeded</label>
            </value>
            <value>
                <fullName>Relation_Missing</fullName>
                <label>Relation Missing</label>
            </value>
            <value>
                <fullName>Gating_Unmet</fullName>
            </value>
            <value>
                <fullName>Established_False</fullName>
            </value>
            <value>
                <fullName>History_Contradicts</fullName>
            </value>
            <value>
                <fullName>History_Better</fullName>
            </value>
            <value>
                <fullName>Awaiting_Ratification</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>