force-app/main/default/objects/AAO_Flag__c/fields/AAO_Ceiling__c.field-meta.xml
<CustomField>
    <fullName>AAO_Ceiling__c</fullName>
    <description>Written by: the cardinality guard, from Model Config. The bound in force AT THE TIME, frozen on the flag: raising the ceiling later must not silently rewrite why an older run abstained.</description>
    <label>Ceiling</label>
    <type>Number</type>
    <precision>9</precision>
    <scale>0</scale>
</CustomField>