force-app/main/default/objects/AAO_Flag__c/fields/AAO_Cleared_At__c.field-meta.xml
<CustomField>
    <fullName>AAO_Cleared_At__c</fullName>
    <description>Written by: Clearance. Read by: Time-to-clear on methodological; not a measure on contention.</description>
    <label>Cleared At</label>
    <type>DateTime</type>
</CustomField>