force-app/main/default/objects/AAO_Flag__c/fields/AAO_Coverage_Gap__c.field-meta.xml
<CustomField>
    <fullName>AAO_Coverage_Gap__c</fullName>
    <description>JSON. Written by: Raise, from the answer&apos;s coverage. Read by: Flag content forks on coverage. Over nothing: not started, here is what to get. Over partial: here is what stands, with its receipts, and here is the piece missing.</description>
    <label>Coverage Gap</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>