force-app/main/default/objects/AAO_Flag__c/fields/AAO_Escalated_At__c.field-meta.xml
<CustomField>
    <fullName>AAO_Escalated_At__c</fullName>
    <description>Written by: Escalation sweep, when elapsed runway passes the threshold. Read by: When it entered the brief and started counting against the deal.</description>
    <label>Escalated At</label>
    <type>DateTime</type>
</CustomField>