force-app/main/default/objects/AAO_Flag__c/fields/AAO_Evidence_Contract__c.field-meta.xml
<CustomField>
    <fullName>AAO_Evidence_Contract__c</fullName>
    <description>Written by: Raise. Read by: The proposition. Null on a ratification flag, which is about a pending write rather than a condition.</description>
    <label>Evidence Contract</label>
    <type>Lookup</type>
    <referenceTo>AAO_Evidence_Contract__c</referenceTo>
    <relationshipName>AAO_Flags</relationshipName>
    <relationshipLabel>AAO Flags</relationshipLabel>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>