force-app/main/default/objects/AAO_Flag__c/fields/AAO_Evidence_Watermark__c.field-meta.xml
<CustomField>
    <fullName>AAO_Evidence_Watermark__c</fullName>
    <description>Written by: Every pass. Read by: Stops the same evidence raising the same flag twice. Never stops the question being asked again.</description>
    <label>Evidence Watermark</label>
    <type>Text</type>
    <length>255</length>
</CustomField>