force-app/main/default/objects/AAO_Flag__c/fields/AAO_Last_Evidence_Considered__c.field-meta.xml
<CustomField>
    <fullName>AAO_Last_Evidence_Considered__c</fullName>
    <description>Written by: Every pass that read evidence against this proposition. Read by: What the flag owes the seller. Distinguishes we read it and it did not establish this from nothing has been read. A timestamp, never a critique.</description>
    <label>Last Evidence Considered</label>
    <type>DateTime</type>
</CustomField>