force-app/main/default/objects/AAO_Flag__c/fields/AAO_Missing_Count__c.field-meta.xml
<CustomField>
    <fullName>AAO_Missing_Count__c</fullName>
    <description>Written by: the missing-relation reconciler. How many rows of this kind are missing their relation. CLEARANCE IS THIS REACHING ZERO and nothing else: there is no dismissal, so the only way out is the edges existing.</description>
    <label>Missing Count</label>
    <type>Number</type>
    <precision>9</precision>
    <scale>0</scale>
</CustomField>