force-app/main/default/objects/AAO_Flag__c/fields/AAO_Missing_Members__c.field-meta.xml
<CustomField>
    <fullName>AAO_Missing_Members__c</fullName>
    <description>JSON. Written by: the missing-relation reconciler. WHICH rows are missing the relation, by id and by name. A rolled-up flag that only carried a count would tell a seller there is a problem without telling them where, which is the failure the whole receipts discipline exists to prevent.</description>
    <label>Missing Members</label>
    <type>LongTextArea</type>
    <length>32768</length>
</CustomField>