force-app/main/default/objects/AAO_Flag__c/fields/AAO_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>AAO_Opportunity__c</fullName>
    <description>Written by: Raise. Read by: Scoping, roll-up counts.</description>
    <label>Opportunity</label>
    <type>Lookup</type>
    <referenceTo>Opportunity</referenceTo>
    <relationshipName>AAO_Flags</relationshipName>
    <relationshipLabel>AAO Flags</relationshipLabel>
    <deleteConstraint>Restrict</deleteConstraint>
    <required>true</required>
</CustomField>