force-app/main/default/objects/AAO_Flag__c/fields/AAO_Proposed_Count__c.field-meta.xml
<CustomField>
    <fullName>AAO_Proposed_Count__c</fullName>
    <description>Written by: the cardinality guard. How many rows the path WOULD have created. Recorded because the gap between this and the ceiling is what decides whether the ceiling is wrong or the deal is unusual.</description>
    <label>Proposed Count</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>