force-app/main/default/objects/AAO_Flag__c/fields/AAO_Raised_At__c.field-meta.xml
<CustomField>
    <fullName>AAO_Raised_At__c</fullName>
    <description>Immutable. Written by: Raise. On a gating proposition this is opportunity creation. Read by: Age. Day-one red means nothing raises it; it was never down.</description>
    <label>Raised At</label>
    <type>DateTime</type>
</CustomField>