force-app/main/default/objects/AAO_Flag__c/fields/AAO_Relation_Kind__c.field-meta.xml
<CustomField>
    <fullName>AAO_Relation_Kind__c</fullName>
    <description>Written by: the missing-relation reconciler. Read by: what the flag is asking for. THE FLAG IS KEYED ON DEAL PLUS THIS, ruled v1.5, because the action differs per kind: solutions with no stated problem, pressures with no linked goal, and people with no influence edges are three different conversations, and one flag holding all three would be a list nobody can act on.</description>
    <label>Relation Kind</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Solution_Without_Problem</fullName>
                <label>Solution without a stated problem</label>
            </value>
            <value>
                <fullName>Pressure_Without_Goal</fullName>
                <label>Pressure with no linked goal</label>
            </value>
            <value>
                <fullName>Person_Without_Influence_Edge</fullName>
                <label>Person with no influence edges</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>