force-app/main/default/objects/AAO_Flag__c/fields/AAO_State__c.field-meta.xml
<CustomField>
    <fullName>AAO_State__c</fullName>
    <description>Written by: Raise, escalation sweep, clearance. Read by: Whether it surfaces and whether it is ageing.</description>
    <label>State</label>
    <type>Picklist</type>
    <required>true</required>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Standing</fullName>
            </value>
            <value>
                <fullName>Escalated</fullName>
            </value>
            <value>
                <fullName>Cleared</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>