force-app/main/default/objects/AAO_Flag__c/fields/AAO_Subject_Contact__c.field-meta.xml
<CustomField>
    <fullName>AAO_Subject_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Written by: Raise. Read by: Contention&apos;s subject. The flag still belongs to the deal, never to a person.</description>
    <label>Subject Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>AAO Flag Subjects</relationshipLabel>
    <relationshipName>AAO_Flag_Subjects</relationshipName>
    <type>Lookup</type>
</CustomField>