force-app/main/default/objects/AAO_Flag__c/fields/AAO_Synthetic__c.field-meta.xml
<CustomField>
    <fullName>AAO_Synthetic__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Written by: the demo seeder, via AAO_Synthetic.MARK. Read by: AAO_Demo.purge, which deletes only rows carrying it, and by anyone asking whether a row in this org came from a real pass or from the rehearsal. Operational marker; no law reads it.</description>
    <label>Synthetic</label>
    <type>Checkbox</type>
</CustomField>