force-app/main/default/objects/AAO_Flag__c/fields/AAO_Type__c.field-meta.xml
<CustomField>
    <fullName>AAO_Type__c</fullName>
    <description>Immutable. Written by: Raise. Read by: Clearance rule, measurement, surfacing tier.</description>
    <label>Type</label>
    <type>Picklist</type>
    <required>true</required>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Methodological</fullName>
            </value>
            <value>
                <fullName>Contention_Negative</fullName>
            </value>
            <value>
                <fullName>Contention_Positive</fullName>
            </value>
            <value>
                <fullName>Cardinality</fullName>
            </value>
            <value>
                <fullName>Missing_Relation</fullName>
                <label>Missing Relation</label>
            </value>
            <value>
                <fullName>Ratification</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>